force-app/main/default/objects/Equipements_du_foyer__c/fields/Marque_TV__c.field-meta.xml
<CustomField>
    <fullName>Marque_TV__c</fullName>
    <label>Marque TV</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>A.R. SYSTEMS</label>
            </value>
            <value>
                <fullName>1212</fullName>
                <label>ACER</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>AGASHI</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>AGEF</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>AIKO</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>AIWA</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>AKAI</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>AKIBA</label>
            </value>
            <value>
                <fullName>1201</fullName>
                <label>AKITA</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>ALBA</label>
            </value>
            <value>
                <fullName>956</fullName>
                <label>ALTUS</label>
            </value>
            <value>
                <fullName>1197</fullName>
                <label>AMOI</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>AMPLIVISION</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>AMSTRAD</label>
            </value>
            <value>
                <fullName>951</fullName>
                <label>ANEX</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>ANITECH</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>ARDEM</label>
            </value>
            <value>
                <fullName>36</fullName>
                <label>ASUKA</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>AUDIOSONIC</label>
            </value>
            <value>
                <fullName>911</fullName>
                <label>AUTRE MARQUE</label>
            </value>
            <value>
                <fullName>1211</fullName>
                <label>AYA</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>BANG &amp; OLUFSEN</label>
            </value>
            <value>
                <fullName>1190</fullName>
                <label>BARCO</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>BASIC LINE</label>
            </value>
            <value>
                <fullName>1130</fullName>
                <label>BAZIN</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>BEKO</label>
            </value>
            <value>
                <fullName>55</fullName>
                <label>BEST</label>
            </value>
            <value>
                <fullName>1177</fullName>
                <label>BISONIC</label>
            </value>
            <value>
                <fullName>58</fullName>
                <label>BLACK STAR</label>
            </value>
            <value>
                <fullName>61</fullName>
                <label>BLAUPUNKT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>