force-app/main/default/objects/Equipements_du_foyer__c/fields/Mode_de_communication__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_communication__c</fullName>
    <label>Mode de communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>GSM</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>WIFI</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Câble Ethernet</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Boitier CPL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>