force-app/main/default/objects/Equipements_du_foyer__c/fields/Mode_de_reception__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_reception__c</fullName>
    <label>Mode de réception</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_de_decodeur__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Hertzienne</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>ADSL</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Câble</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Fibre optique</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Satellite</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>