force-app/main/default/objects/Equipements_du_foyer__c/fields/Modele_de_console_de_jeux__c.field-meta.xml
<CustomField>
    <fullName>Modele_de_console_de_jeux__c</fullName>
    <label>Modèle de console de jeux</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>35</fullName>
                <label>MICROSOFT - XBOX One</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>SONY - PLAYSTATION 4</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>MICROSOFT - XBOX 360</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>SONY - PLAYSTATION 3</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>NINTENDO - Wii U</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>NINTENDO - Wii</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>MICROSOFT - XBOX</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>AUTRES MODELES</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>