force-app/main/default/objects/Equipements_du_foyer__c/fields/Modele_du_Cast__c.field-meta.xml
<CustomField>
    <fullName>Modele_du_Cast__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Modèle du Cast</label>
    <length>18</length>
    <type>Text</type>
</CustomField>