force-app/main/default/objects/Equipements_du_foyer__c/fields/Modele_du_magnetoscope__c.field-meta.xml
<CustomField>
    <fullName>Modele_du_magnetoscope__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Modèle magnétoscope</label>
    <length>80</length>
    <type>Text</type>
</CustomField>