force-app/main/default/objects/Equipements_du_foyer__c/fields/Modele_Objet_Connecte__c.field-meta.xml
<CustomField>
    <fullName>Modele_Objet_Connecte__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Modèle Objet Connecté</label>
    <length>50</length>
    <type>Text</type>
</CustomField>