force-app/main/default/objects/Equipements_du_foyer__c/fields/Num_ro_de_t_lephone__c.field-meta.xml
<CustomField>
    <fullName>Num_ro_de_t_lephone__c</fullName>
    <label>Numéro de télephone</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>