force-app/main/default/objects/Equipements_du_foyer__c/fields/Num_ro_IMEI__c.field-meta.xml
<CustomField>
    <fullName>Num_ro_IMEI__c</fullName>
    <label>Numéro IMEI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>