force-app/main/default/objects/Equipements_du_foyer__c/fields/Numero_de_poste__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_poste__c</fullName>
    <label>Numéro de poste</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>