force-app/main/default/objects/Equipements_du_foyer__c/fields/Operateur__c.field-meta.xml
<CustomField>
    <fullName>Operateur__c</fullName>
    <label>Opérateur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
                <label>Autre opérateur mo</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>B&amp;YOU de Bouygues télécom</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Bouygues Telecom</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Fnac Mobile</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Free Mobile</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>M6 Mobile</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>NRJ Mobile</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>NSP</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Orange</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>RED de SFR</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>SFR</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Sosh d&apos;Orange</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Universal Mobile</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Carrefour Mobile</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>U Mobile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>