force-app/main/default/objects/Equipements_du_foyer__c/fields/Ordinateur__c.field-meta.xml
<CustomField>
    <fullName>Ordinateur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ordinateur</label>
    <type>Checkbox</type>
</CustomField>