force-app/main/default/objects/Equipements_du_foyer__c/fields/OS_mobile__c.field-meta.xml
<CustomField>
    <fullName>OS_mobile__c</fullName>
    <label>OS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>Android</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>IOS</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Autres</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>