force-app/main/default/objects/Equipements_du_foyer__c/fields/OS_ordinateur__c.field-meta.xml
<CustomField>
    <fullName>OS_ordinateur__c</fullName>
    <label>OS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3</fullName>
                <label>windows</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Macos</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Linux</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Autres</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>