force-app/main/default/objects/Equipements_du_foyer__c/fields/OS_ordinateur_c__c.field-meta.xml
<CustomField>
    <fullName>OS_ordinateur_c__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OS</label>
    <length>18</length>
    <type>Text</type>
</CustomField>