force-app/main/default/objects/Equipements_du_foyer__c/fields/Perdu__c.field-meta.xml
<CustomField>
    <fullName>Perdu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perdu</label>
    <type>Checkbox</type>
</CustomField>