force-app/main/default/objects/Equipements_du_foyer__c/fields/Peu_d__c.field-meta.xml
<CustomField>
    <fullName>Peu_d__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Peu détecté</label>
    <type>Checkbox</type>
</CustomField>