force-app/main/default/objects/Equipements_du_foyer__c/fields/Port_USB_TV__c.field-meta.xml
<CustomField>
    <fullName>Port_USB_TV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Port USB TV</label>
    <type>Checkbox</type>
</CustomField>