force-app/main/default/objects/Equipements_du_foyer__c/fields/Poste_TV__c.field-meta.xml
<CustomField>
    <fullName>Poste_TV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Poste TV</label>
    <referenceTo>Equipements_du_foyer__c</referenceTo>
    <relationshipLabel>Périphériques</relationshipLabel>
    <relationshipName>Equipements_du_foyer</relationshipName>
    <type>Lookup</type>
</CustomField>