force-app/main/default/objects/Equipements_du_foyer__c/fields/Prix__c.field-meta.xml
<CustomField>
    <fullName>Prix__c</fullName>
    <label>Prix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>