force-app/main/default/objects/Equipements_du_foyer__c/fields/Retroprojecteur__c.field-meta.xml
<CustomField>
    <fullName>Retroprojecteur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rétroprojecteur</label>
    <type>Checkbox</type>
</CustomField>