force-app/main/default/objects/Equipements_du_foyer__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validé</fullName>
            </value>
            <value>
                <fullName>Installé</fullName>
            </value>
            <value>
                <fullName>Désinstallé</fullName>
            </value>
            <value>
                <fullName>En panne</fullName>
            </value>
            <value>
                <fullName>Rebut</fullName>
            </value>
            <value>
                <fullName>Obsolète</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>