force-app/main/default/objects/Equipements_du_foyer__c/fields/Surnom_equipement__c.field-meta.xml
<CustomField>
    <fullName>Surnom_equipement__c</fullName>
    <formula>LEFT(Utilisateur_principal__r.FirstName, 2) + LEFT(Utilisateur_principal__r.LastName,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surnom</label>
    <type>Text</type>
</CustomField>