force-app/main/default/objects/Equipements_du_foyer__c/fields/Systeme_d_exploitation__c.field-meta.xml
<CustomField>
    <fullName>Systeme_d_exploitation__c</fullName>
    <label>Système d&apos;exploitation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>IOS</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Android</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Windows</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>MACOS</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Linux</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Autres</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>