force-app/main/default/objects/Equipements_du_foyer__c/fields/Tech_Foyer__c.field-meta.xml
<CustomField>
    <fullName>Tech_Foyer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tech_Foyer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>