force-app/main/default/objects/Equipements_du_foyer__c/fields/Telephone_par_adsl__c.field-meta.xml
<CustomField>
    <fullName>Telephone_par_adsl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Téléphone par ADSL</label>
    <type>Checkbox</type>
</CustomField>