force-app/main/default/objects/Equipements_du_foyer__c/fields/Tnt_integree_tv__c.field-meta.xml
<CustomField>
    <fullName>Tnt_integree_tv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TNT intégrée TV</label>
    <type>Checkbox</type>
</CustomField>