force-app/main/default/objects/Equipements_du_foyer__c/fields/Tv_16_9__c.field-meta.xml
<CustomField>
    <fullName>Tv_16_9__c</fullName>
    <defaultValue>false</defaultValue>
    <label>16/ 9</label>
    <type>Checkbox</type>
</CustomField>