force-app/main/default/objects/Equipements_du_foyer__c/fields/TV_HD__c.field-meta.xml
<CustomField>
    <fullName>TV_HD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TV HD</label>
    <type>Checkbox</type>
</CustomField>