force-app/main/default/objects/Equipements_du_foyer__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7</fullName>
                <label>Ordinateur fixe</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Ordinateur portable</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Tablette</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Mobile</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Poste TV</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Lecteur DVD</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Console de jeux</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Magnétoscope</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Décodeur</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Divers</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Box</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Caster</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Objet Connecté</label>
            </value>
            <value>
                <fullName>17</fullName>
                <isActive>false</isActive>
                <label>Autre équipement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>