force-app/main/default/objects/Equipements_du_foyer__c/fields/Type_de_decodeur__c.field-meta.xml
<CustomField>
    <fullName>Type_de_decodeur__c</fullName>
    <label>Type de décodeur</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Fournisseur__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1</fullName>
                <label>Adaptateur TNT externe</label>
            </value>
            <value>
                <fullName>52</fullName>
                <label>Adaptateur TNT externe cable</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Adaptateur TNT intégré</label>
            </value>
            <value>
                <fullName>53</fullName>
                <label>Adaptateur TNT intégré cable</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Adaptateur TNT intégré hertzien</label>
            </value>
            <value>
                <fullName>57</fullName>
                <label>ALICE ADSL</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>AUCHAN ADSL</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Aucun décodeur</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>Autre décodeur TNT Payante</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>AUTRE FOURNISSEUR ADSL</label>
            </value>
            <value>
                <fullName>46</fullName>
                <label>AUTRE FOURNISSEUR CABLE ANALOGIQUE</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>AUTRE FOURNISSEUR CABLE NUMERIQUE</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>AUTRE FOURNISSEUR SATELLITE</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Bbox Miami</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>BIS TV</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>BOUYGUES ADSL</label>
            </value>
            <value>
                <fullName>58</fullName>
                <label>CANALSAT/CANAL+ par SAT</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>CANALSAT/CANAL+ par TNT (SYSTER+)</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>DARTY ADSL</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Décodeur collectif</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Décodeur du fournisseur</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Eqt connecté web</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>FRANSAT</label>
            </value>
            <value>
                <fullName>42</fullName>
                <label>FRANSAT Collectif</label>
            </value>
            <value>
                <fullName>59</fullName>
                <label>FREE ADSL</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>FREEBOX REVOLUTION</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Le Cube</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Le Cube S</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>NEUF SFR ADSL</label>
            </value>
            <value>
                <fullName>48</fullName>
                <label>NUMERICABLE ANALOGIQUE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>