force-app/main/default/objects/Equipements_du_foyer__c/fields/Type_de_transmetteur_video__c.field-meta.xml
<CustomField>
    <fullName>Type_de_transmetteur_video__c</fullName>
    <label>Type de vidéo transmetteur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Emetteur</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Récepteur</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>