force-app/main/default/objects/Equipements_du_foyer__c/fields/Type_transmetteur__c.field-meta.xml
<CustomField>
    <fullName>Type_transmetteur__c</fullName>
    <label>Type transmetteur vidéo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mettre ici</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>