force-app/main/default/objects/Equipements_du_foyer__c/fields/Usage_Principal__c.field-meta.xml
<CustomField>
    <fullName>Usage_Principal__c</fullName>
    <label>Usage Principal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personnel</fullName>
            </value>
            <value>
                <fullName>Professionnel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>