force-app/main/default/objects/Equipements_du_foyer__c/fields/Utilisateur_principal__c.field-meta.xml
<CustomField>
    <fullName>Utilisateur_principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utilisateur principal</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Ce contact n&apos;appartient au foyer de l&apos;équipement.</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Foyer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Equipements du foyer</relationshipLabel>
    <relationshipName>Equipements_du_foyer</relationshipName>
    <type>Lookup</type>
</CustomField>