force-app/main/default/objects/Equipements_du_foyer__c/fields/Utilise_au_moins_une_fois_par_mois__c.field-meta.xml
<CustomField>
    <fullName>Utilise_au_moins_une_fois_par_mois__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utilisé au moins une une par mois</label>
    <type>Checkbox</type>
</CustomField>