force-app/main/default/objects/Equipements_du_foyer__c/fields/Uuid_Poste__c.field-meta.xml
<CustomField>
    <fullName>Uuid_Poste__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Uuid_Poste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>