force-app/main/default/objects/Equipements_du_foyer__c/fields/Video_Projecteur__c.field-meta.xml
<CustomField>
    <fullName>Video_Projecteur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vidéo-Projecteur</label>
    <type>Checkbox</type>
</CustomField>