force-app/main/default/objects/Equipements_du_foyer__c/recordTypes/Devices.recordType-meta.xml
<RecordType>
    <fullName>Devices</fullName>
    <active>true</active>
    <label>Devices</label>
</RecordType>