force-app/main/default/objects/Equipements_du_foyer__c/recordTypes/P_riph_riques.recordType-meta.xml
<RecordType>
    <fullName>P_riph_riques</fullName>
    <active>true</active>
    <label>Périphériques</label>
</RecordType>