force-app/main/default/objects/Equipements_du_foyer__c/recordTypes/Poste_TV.recordType-meta.xml
<RecordType>
    <fullName>Poste_TV</fullName>
    <active>true</active>
    <label>Poste TV</label>
</RecordType>