force-app/main/default/objects/Equipements_du_foyer__c/validationRules/RV_champsObligatoiresPourDecodeur.validationRule-meta.xml
<ValidationRule>
    <fullName>RV_champsObligatoiresPourDecodeur</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Type__c , &apos;2&apos;), OR(ISPICKVAL(Type_de_decodeur__c , &quot;&quot;) , ISPICKVAL(Fournisseur__c , &quot;&quot;), ISPICKVAL(Mode_de_reception__c, &quot;&quot;))   
)</errorConditionFormula>
    <errorMessage>Pour le type Décodeur, les champs Type de décodeur, Fournisseur et Mode de réception sont obligatoires</errorMessage>
</ValidationRule>