force-app/main/default/objects/Equipements_du_foyer__c/validationRules/RV_Mode_Reception_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RV_Mode_Reception_obligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISNEW() ||  NOT(ISNEW()), ISPICKVAL(Type__c , &apos;2&apos;), ISPICKVAL(Mode_de_reception__c, &quot;&quot;))</errorConditionFormula>
    <errorMessage>Veuillez sélectionner un mode de réception</errorMessage>
</ValidationRule>