force-app/main/default/objects/Equipements_du_foyer__c/listViews/Postes_TV.listView-meta.xml
<ListView>
    <fullName>Postes_TV</fullName>
    <columns>NAME</columns>
    <columns>Foyer_paneliste__c</columns>
    <columns>Marque_TV__c</columns>
    <columns>Poste_TV__c</columns>
    <columns>Usage_Principal__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Postes TV</label>
</ListView>